# dvdbackup

./: .gitignore  READMEX  configure.ac
src/: Makefile.am  dvdbackup.c  dvdbackup.h  dvdlogger.h  find-sector.c  logdb.c  logdb.h  logdb.sql  logger.c  logger.h  main.c
